# CS416p

./: .gitattributes  .gitignore  README.md  final.html  notbook.html  notebook.html  notebook.md
code/Adaptive_Tone_Control/: average_tone.py
code/Clipped/: sinwav.py
code/DigiFilter/: lowpass.py
code/FFT/: frequency-finder.py
code/Ferrofluid_Visualizer/: audio_stream.py  main (for Pico).py
code/Ferrofluid_Visualizer/pico_fft (broken)/: CMakeLists.txt  main.c
code/popgen/: popgen.py
final_assets/: demo.mov
